# avogadro-swireengine

./: CMakeLists.txt  README  swireengine.cpp  swireengine.h
